--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ozen0416/KOJOK_TARRAF-AINTANGAR-OUDIN-Blue-Project#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
